applicaiton_deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sellerspot-poc-core-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns"
spec:
  tls:
    - hosts:
        - "sellerspotdev.tech"
        - "*.api.sellerspotdev.tech"
        - "*.pos.sellerspotdev.tech"
        - "*.sellerspotdev.tech"
      secretName: sellerspotdev.tech-letsencrypt-prod-dns
  rules:
    - host: "sellerspotdev.tech"
      http:
        paths:
          - backend:
              serviceName: sellerspot-poc-core-app
              servicePort: 8000
            path: /
    - host: "www.sellerspotdev.tech"
      http:
        paths:
          - backend:
              serviceName: sellerspot-poc-core-app
              servicePort: 8000
            path: /
    - host: "core.api.sellerspotdev.tech"
      http:
        paths:
          - backend:
              serviceName: sellerspot-poc-core-server
              servicePort: 5000
            path: /
    - host: "*.pos.sellerspotdev.tech"
      http:
        paths:
          - backend:
              serviceName: sellerspot-poc-pos-app
              servicePort: 8000
            path: /
    - http:
        paths:
          - backend:
              serviceName: sellerspot-poc-core-app
              servicePort: 8000
            path: /
